<resources>
    <string name="app_name">Africa Quiz App</string>
    <string name="quiz_progress">Quiz Progress</string>
    <string name="Next">Next Question</string>
    <string name="overView_StartQuiz">START QUIZ</string>
    <string name="overView_MisconceptionsOfAfrica">MISCONs OF AFRICA</string>
    <string name="splash_screen_imageDescription">a sketch of the map of africa</string>
    <string name="overView_AfricaNews">AFRICA NEWS</string>
    <string name="overView_DidYouKnow">DID YOU KNOW?</string>
    <string name="text_description">How well  do you think you know the continent Africa and it\'s
        54 independent countries?</string>
    <string name="about_africa_quiz">AFRICA QUIZ APP</string>
    <string name="nothing_selected">onNothingSelected:</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="start_quiz">START QUIZ</string>
    <string name="score">SCORE BOARD</string>
    <string name="picture_of_a_score_board">picture of a score board</string>
    <string name="picture_of_a_trophy">picture of a trophy</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="did_you_know">DID YOU KNOW!</string>
    <string name="contentDescrip_0">Africa is a huge continent made up of 54 countries and over a billion people....[READ MORE]</string>
    <string name="contentDescrip_1">Africa and Europe are separated by less than 9 miles at the Strait of Gibraltar... [READ MORE]</string>
    <string name="contentDescrip_2">In South Africa you are legally allowed to attach flamethrowers to your car... [READ MORE]</string>
    <string name="contentDescrip_3">Timbuktu, Mali is home of one of the oldest universities in the world, established in 982 CE. ... [READ MORE]</string>
    <string name="contentDescrip_4">The world’s biggest frog is found in Equatorial Guinea and Cameroon...[VIEW MORE]</string>
    <string name="contentDescrip_5">The word “Crossword” in Kiswahili, a language spoken mainly by people in eastern and central Africa is chemshebongo ...[READ MORE]</string>
    <string name="contentDescrip_6">The official title of Idi Amin, the Ugandan dictator, was His Excellency ... [READ MORE]</string>
    <string name="contentDescrip7">Ethiopia is the only African country with its own alphabet... [READ MORE]</string>
    <string name="contentDescrip_8">Graca Machel is the only women to have ever been first lady of two different countries... [READ MORE]</string>
    <string name="contentDescrip_9">Sudan has more than 200 pyramids, double the number found in Egypt ... [READ MORE]</string>
    <string name="contentDescrip_10">Almost half of the gold ever mined on Earth has come from a single place ... [READ MORE]</string>
    <string name="contentDescrip_11">Libya’s current flag, introduced in 2011 after the overthrow of Gaddafi’s government ... [READ MORE]</string>
    <string name="content0">Africa is a huge continent made up of 54 countries and over a billion
        people. But did you know that in a country called Ethiopia (a country in East Africa),
        clocks are upside down with our 6:00 at their 12:00?</string>
    <string name="go_back">Go Back</string>
    <string name="content1">Africa and Europe are separated by less than 9 miles at the Strait of Gibraltar, which separates Spain from Morocco. The two countries are discussing constructing an undersea rail tunnel to connect the rail systems on the two continents.</string>
    <string name="content2">In South Africa you are legally allowed to attach flamethrowers to your car in order to deter car jacking. Seriously.</string>
    <string name="content3">Timbuktu, Mali is home of one of the oldest universities in the world, established in 982 CE. By the 12th century, the city was such an intellectual hub that National Geographic has referred to it as the Paris of the medieval world. I guess the Spice Girls didn’t take geography because in one of their self penned lyrics they believed Timbuktu to be located in China!</string>
    <string name="content4">The world’s biggest frog is found in Equatorial Guinea and Cameroon. Named the Goliath frog, it can grow up to be a foot long and weigh up to 8 lb.</string>
    <string name="content5">The word “Crossword” in Kiswahili, a language spoken mainly by people in eastern and central Africa is “chemshebongo” which, when translated, means “boil brains”. I suppose after trying to do the Sunday New York Times puzzle your head might feel like exploding!</string>
    <string name="content6">The official title of Idi Amin, the Ugandan dictator, was “His Excellency, President for Life, Field Marshal Al Hadji Doctor Idi Amin Dada, VC, DSO, MC, Lord of All the Beasts of the Earth and Fishes of the Seas and Conqueror of the British Empire in Africa in General and Uganda in Particular”.</string>
    <string name="content7">Ethiopia is the only African country with its own alphabet. It’s also the world’s oldest living alphabets – Ethiopic – and probably one of the longest with its 345 letters.</string>
    <string name="content8">Graca Machel is the only women to have ever been first lady of two different countries (Mozambique and South Africa).</string>
    <string name="content9">Sudan has more than 200 pyramids, double the number found in Egypt. The Meroe pyramids were part of the Nubian Kingdom of Kush and are up to 4,600 years old.</string>
    <string name="content10">Almost half of the gold ever mined on Earth has come from a single place – Witwatersrand, South Africa.</string>
    <string name="content11">Libya’s current flag, introduced in 2011 after the overthrow of Gaddafi’s government, is a red-black-green triband featuring a white star and crescent.  However, from 1977 to 2011, Libya was the only country in the world with only one color for its flag, with no insignias, design or other details. It was chosen by Gaddafi since it symbolized both Islam and his political philosophy (after his Green Book).</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="text_description2">Test Your Knowledge!</string>
    <string name="about_us">About</string>
    <string name="contact_us">Contact</string>
    <string name="versioning">Version 1.1.1 CopyRight (&#169;)? iyke 2018. All Rights
        Reserved</string>
    <string name="about_content">Africa Quiz App is an App that teaches the history and culture of Africa and its people. The main purpose of this Africa Quiz is to educate everyone -whether you are a teacher, a student, an entrepreneur, a civil servant, a journalist; the app will teach you about the diverse heritage within all the countries in Africa.</string>
    <string name="about_africa_quiz_app">About Africa Quiz App</string>
    <string name="terms_privacy"><![CDATA[Terms & Privacy]]></string>
    <string name="privacy_statement"> By Using Africa Quiz App, you agree to Africa Quiz App Terms
        and" <a href="https://www.360forextrader.com/privacy-policy/">Privacy</a> ---Read it here (https://www.360forextrader.com/privacy-policy/)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Miscon_welcome">When you travel out of Africa and meet individuals who have
        never been to the continent, most of the time they tend to have certain perceptions that
        depict the continent in ways that are either not factual or are misleading. \n\nWe will look
        at some of the common misconceptions and stereotypes about Africa that have been passed on through various forms of media for decades and are believed to be the true representation of the continent.</string>
    <string name="Miscon_back">Back</string>
    <string name="Miscon_next">Next</string>
    <string name="miscon_1">There is a common misconception that all African people live in grass-thatched huts made of mud and dung. \nIt is true that mud huts are one of the most common forms of housing in rural areas on the continent, but it would not be fair for us not to mention the rapidly growing urban centers throughout the continent. \n\nMany African nations are going through economic growth, which is leading enormous growth in cities with brick and stone houses, clean tap water, internet connectivity, and electricity, as well as other basic necessities that are accessible to residents in some of the world’s best cities.\nThe skyline of most African cities is nothing short of beautifully architecturally designed skyscrapers that have become a source of pride for their home countries.</string>
    <string name="title_activity_miscon_2">Miscon_2</string>
    <string name="miscon_2">Another common misconception is that Africa is a huge forest that man and wild animals coexist in together. \nThis misconception denotes that we keep wild animals like lions or leopards, as well as other wild animals as pets, and that it is common to see lions roaming in city streets. It is true that Africa is home to many wild animals, but it is not factual that they roam in the streets. \n\nA common story is told of a visiting tourist that shook his head in dismay upon landing at Nairobi’s Jomo Kenyatta International Airport. To the tourist’s dismay, he realized he had landed in an airport in a city that looked much better than the rural town he came from. \nAccording to the middle-aged tourist, all the content he had consumed about Africa, safari drives, and the wild in Africa made him believe he would see wild animals roaming the airport immediately upon landing.</string>
    <string name="miscon_3">If you have travelled overseas from the continent, there is a likelihood that you have met someone who has asked you to teach them to speak ‘African.’ \nNot once have I faced this misconception, and the first time this happened to me, I thought I had misunderstood the request and asked if my new friend meant Swahili, as that is the language spoken in my country. \n\n‘African’ as a language does not exist. The continent is a stronghold for diversity, and with this comes thousands of different languages spoken within it. \nIt is estimated that there are over 2,000 languages spoken in Africa, with some countries like Nigeria having over 200 languages spoken by different ethnic groups. \nHowever, it is important to note that there are some languages that are spoken across many countries; for instance, Swahili in East Africa, Zulu in Southern Africa, among others, but this does not translate to ‘African’ language.</string>
    <string name="miscon_4">One of the most common ways of slighting or insulting an African on social media sites like Twitter and Facebook is by someone who has never been to the continent retorting, ‘I didn’t know they have internet in Africa,’ or ‘I didn’t know Africans use computers.’ \nThis is derived from the common misconception that has been advanced for decades that the continent lags behind in technological advancement, or worse, that there is no availability of technology on the continent. \n\nWhen it comes to technology, Africa has almost everything the rest of the world does. Although we may be slightly behind, technology is fast growing on the continent. \nFor instance, Africa is the fastest region when it comes to mobile growth. It is estimated that over 67% of the population on the continent have mobile phones, and 27% have a device that can access the internet. Simply put, 27% of the total population of Africa have mini computers at their disposal! Africa is not only thriving on mobile technology and internet, but also other forms of technology that contributed immensely to the day-to-day life on the continent.</string>
    <string-array name="question_Array">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
</resources>