<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contactUs">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/app_versioning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:text="@string/versioning" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_versioning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/about_africa_quiz_app"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/about_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:lineSpacingExtra="3sp"
        android:text="@string/about_content" />

    <TextView
        android:id="@+id/term_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/terms_privacy"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/term_privacy"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:autoLink="web"
        android:lineSpacingExtra="3sp"
        android:text="@string/privacy_statement"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent" />
</RelativeLayout>