<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Miscon_3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Africans Speak African"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/miscon_3"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <Button
            android:id="@+id/go_back"
            style="@style/Widget.Default.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="goBack"
            android:text="@string/Miscon_back"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next_button"
            style="@style/Widget.Default.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/go_back"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:onClick="goNext"
            android:text="@string/Miscon_next"
            android:textAllCaps="true"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>