<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    tools:context=".overView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/overviewAd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />


        <android.support.v7.widget.CardView
            android:id="@+id/overViewStartQuiz"
            style="@style/overViewCardView"
            android:layout_below="@id/overviewAd1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:onClick="questionInto"
            cardView:cardBackgroundColor="@android:color/white"
            cardView:cardCornerRadius="6dp"
            cardView:cardElevation="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/start_quiz"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/overViewDidYouKnow"
            style="@style/overViewCardView"
            android:layout_below="@+id/overViewStartQuiz"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:onClick="didYouKnow"
            cardView:cardBackgroundColor="@android:color/white"
            cardView:cardCornerRadius="6dp"
            cardView:cardElevation="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/overView_DidYouKnow"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/overViewAfricaNews"
            style="@style/overViewCardView"
            android:layout_below="@+id/overViewDidYouKnow"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:onClick="africaNews"
            cardView:cardBackgroundColor="@android:color/white"
            cardView:cardCornerRadius="6dp"
            cardView:cardElevation="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/overView_AfricaNews"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/overView_Miscon_Africa"
            style="@style/overViewCardView"
            android:layout_below="@+id/overViewAfricaNews"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:onClick="misconAfrica"
            cardView:cardBackgroundColor="@android:color/white"
            cardView:cardCornerRadius="6dp"
            cardView:cardElevation="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/overView_MisconceptionsOfAfrica"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>


        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/overviewAd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/overView_Miscon_Africa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
    </RelativeLayout>
</ScrollView>
