<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".introStartQuiz">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/splash_screen_imageDescription"
            android:scaleType="fitXY"
            android:src="@drawable/background" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:fontFamily="@font/ateecafont"
            android:layout_centerHorizontal="true"
            android:text="@string/about_africa_quiz"
            android:textAlignment="center"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heading"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/text_description"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/questionSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Number of questions"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/question_Array"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_marginBottom="20dp"
            android:layout_toRightOf="@id/questionSection">

        </Spinner>

        <TextView
            android:id="@+id/difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/questionSection"
            android:layout_marginBottom="23dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Select Difficulty"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/difficult_Array"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/questionSection"
            android:layout_marginLeft="35dp"
            android:layout_toRightOf="@id/difficult">

        </Spinner>

        <Button
            style="@style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/difficult"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="quizQuestions"
            android:text="START QUIZ" />

    </RelativeLayout>
</ScrollView>